src/objects/loan__GL_Balance__c.object
<CustomObject>
    <fields>
        <fullName>loan__Closing_Balance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>GL Balance</relationshipLabel>
        <relationshipName>GL_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GL Balance</label>
    <nameField>
        <displayFormat>GLBID-{0000000000}</displayFormat>
        <label>GL Balance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>